# cooper-bold-logo-soup

./: .distignore  .env.example  .gitignore  .wp-env.json  AGENTS.md  AI_RUNBOOK.md  AI_SESSION_MEMORY.md  README.md  balanced-logos.php  composer.json  cooper-bold-logo-soup.php  package-lock.json  package.json  phpunit.xml.dist  readme.txt
.cursor/: context7-libraries.md
assets/: README.md
crewai/: .env.example  .gitignore  README.md  pyproject.toml
crewai/src/balanced_logos_wp_plugin/: __init__.py  crew.py  main.py
crewai/src/balanced_logos_wp_plugin/config/: agents.yaml  tasks.yaml
crewai/src/balanced_logos_wp_plugin/tools/: __init__.py
crewai/src/logo_soup_wp_plugin/: crew.py
docs/: ADVERSARIAL-REVIEW.md  RAPIDSOS-DEPLOY.md  SAR-REVIEW.md  SMOKE-TEST.md  WORDPRESS-ORG-SUBMISSION.md
includes/: class-cb-balanced-logos-admin-branding.php  class-cb-balanced-logos-assets.php  class-cb-balanced-logos-collections.php  class-cb-balanced-logos-renderer.php  class-cb-balanced-logos.php  class-cb-logo-soup-admin-branding.php  class-cb-logo-soup-assets.php  class-cb-logo-soup-collections.php  class-cb-logo-soup-renderer.php  class-cb-logo-soup.php
scripts/: build-release-zip.sh  generate-wporg-assets.py
src/: view.js  view.scss
tests/: CB_Balanced_Logos_Admin_Branding_Test.php  CB_Balanced_Logos_Assets_Test.php  CB_Balanced_Logos_Collections_Test.php  CB_Balanced_Logos_Renderer_Test.php  CB_Logo_Soup_Admin_Branding_Test.php  CB_Logo_Soup_Collections_Test.php  CB_Logo_Soup_Renderer_Test.php  bootstrap.php
wiki/: SCHEMA.md  index.md  log.md
(+31 files in other folders)
