[project]
name = "logo-soup-wp-plugin-crew"
version = "0.1.0"
description = "Logo Soup WP Plugin planning crew using CrewAI"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=0.79.4,<2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
run_crew = "logo_soup_wp_plugin.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/logo_soup_wp_plugin"]
