[project]
name = "balanced-logos-wp-plugin-crew"
version = "0.1.0"
description = "Balanced Logos WP Plugin planning crew using CrewAI"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=0.79.4,<2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
run_crew = "balanced_logos_wp_plugin.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/balanced_logos_wp_plugin"]
